Still trying to fix the images.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 # Site settings
-title: Agilent Technologies: iLab Design Guidelines
+title: Agilent Technologies -- iLab Design Guidelines
 email:
 description: > # this means to ignore newlines until "baseurl:"
   Guidelines for the iLab WebApp
